# codex-guide

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
.github/workflows/: ci.yml  deploy-worker.yml  release.yml
docs/superpowers/specs/: 2026-06-14-windows-first-codex-guide-design.md
macos/: install-codex-local.sh  安装Codex.command
scripts/: install.ps1  install.sh
skills/codex-gorustai-bootstrap/: SKILL.md
src/: main.rs
windows/: 安装Codex.bat
worker/src/: index.js
