[package]
name = "codex-guide"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Windows-first one-line installer for Codex, gorustai.com, and cc-switch-cli"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
